Refactoring & Add comments

--- a/edie_display/CMakeLists.txt
+++ b/edie_display/CMakeLists.txt
@@ -3,16 +3,12 @@ project(edie_display)
 
 add_compile_options(-std=c++11)
 add_compile_options(-ljsoncpp)
-MESSAGE("----------------------------------------------")
-MESSAGE(edie_msgs_generate_messages_cpp)
-MESSAGE("----------------------------------------------")
 
 find_package(catkin REQUIRED COMPONENTS
   roscpp
   roslib
   rospy
   std_msgs
-  edie_msgs
 )
 
 
@@ -20,7 +16,7 @@ catkin_package(
    INCLUDE_DIRS include
    LIBRARIES
     ${PROJECT_NAME}_lib
-   CATKIN_DEPENDS roscpp roslib rospy std_msgs edie_msgs
+   CATKIN_DEPENDS roscpp roslib rospy std_msgs 
    DEPENDS system_lib
 )
 
@@ -47,7 +43,6 @@ add_library(${PROJECT_NAME}_lib
 
 add_dependencies(${PROJECT_NAME}_lib
    ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS}
-   edie_msgs_generate_messages_cpp
 )
 
 
